--- a/profile.html
+++ b/profile.html
@@ -428,6 +428,6 @@
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
-<script src="js/regioneProvincia.js"></script>
+<script src="js/navbar.js"></script>
 </body>
 </html>
