--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -51,16 +52,12 @@
                     <p class="nav-icon-text nav-link">Annunci osservati</p>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pt-3px">
 
 
 
 
-
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalLoginRegister">
-                    Launch demo modal
-                </button>
+                <a class="nav-link pt" href="#0" onclick="accediRegistrati('tabAccedi')">Accedi</a>
 
                 <!-- Modal -->
                 <div class="modal fade show" id="modalLoginRegister" tabindex="-1" role="dialog" aria-modal="true">
@@ -71,12 +68,12 @@
                                 <!-- Pills -->
                                 <ul class="nav nav-justified container">
                                     <li class="nav-item mr-1">
-                                        <a class="nav-link border border-warning border-rounded active show bg-warning" data-toggle="tab"
-                                           href="#modalLoginRegister-login" role="tab" aria-selected="true">Login</a>
+                                        <a id="tabAccedi" class="nav-link border border-warning border-rounded bg-warning" data-toggle="tab"
+                                           href="#modalLoginRegister-login" role="tab" aria-selected="true">Accedi</a>
                                     </li>
                                     <li class="nav-item pt-0">
-                                        <a class="nav-link border border-warning border-rounded bg-warning" data-toggle="tab"
-                                           href="#modalLoginRegister-register" role="tab" aria-selected="false">Register</a>
+                                        <a id="tabRegistrati" class="nav-link border border-warning border-rounded bg-warning" data-toggle="tab"
+                                           href="#modalLoginRegister-register" role="tab" aria-selected="false">Registrati</a>
                                     </li>
                                 </ul>
                                 <!-- Pills -->
@@ -92,20 +89,17 @@
 
                                             <div class="md-form md-outline">
                                                 <i class="fas fa-envelope prefix"></i>
-                                                <input type="email" id="formLoginRegister-email" class="form-control">
-                                                <label data-error="wrong" data-success="right" for="formLoginRegister-email">Your email</label>
+                                                <input type="email" id="formLoginRegister-email" class="form-control" placeholder="E-mail">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-email"></label>
                                             </div>
                                             <div class="md-form md-outline">
                                                 <i class="fas fa-lock prefix"></i>
-                                                <input type="password" id="formLoginRegiser-password" class="form-control">
-                                                <label data-error="wrong" data-success="right" for="formLoginRegiser-password">Your
-                                                    password</label>
+                                                <input type="password" id="formLoginRegiser-password" class="form-control" placeholder="Password">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegiser-password"></label>
                                             </div>
 
                                             <div class="text-center mt-4 pt-3">
-                                                <button type="button" class="btn btn-outline-primary mr-1 mb-2 waves-effect waves-light">Forgot
-                                                    password?</button>
-                                                <button type="button" class="btn btn-primary mb-2">Login</button>
+                                                <button type="button" class="btn btn-warning mb-2">Accedi</button>
                                             </div>
 
                                         </form>
@@ -122,46 +116,69 @@
 
                                             <div class="md-form md-outline">
                                                 <i class="fas fa-user prefix"></i>
-                                                <input type="text" id="formLoginRegister-name" class="form-control">
-                                                <label data-error="wrong" data-success="right" for="formLoginRegister-name">Your name</label>
+                                                <input type="text" id="formLoginRegister-name" class="form-control" placeholder="Nome">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-name"></label>
                                             </div>
                                             <div class="md-form md-outline">
-                                                <i class="fas fa-pencil-alt prefix"></i>
-                                                <input type="text" id="formLoginRegister-username" class="form-control">
-                                                <label data-error="wrong" data-success="right" for="formLoginRegister-username">Your
-                                                    username</label>
+                                                <i class="fas fa-user-tie    prefix"></i>
+                                                <input type="text" id="formLoginRegister-surname" class="form-control" placeholder="Cognome">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-surname"></label>
+                                            </div>
+                                            <div class="md-form md-outline">
+                                                <i class="fas fa-id-card prefix"></i>
+                                                <input type="text" id="formLoginRegister-codiceFiscale" class="form-control" placeholder="Codice Fiscale">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-codiceFiscale"></label>
+                                            </div>
+                                            <div class="md-form md-outline">
+                                                <i class="fas fa-map-marked-alt prefix"></i>
+                                                <select name="regione" id="register-regione" class="form-control">
+                                                    <option value="" disabled selected hidden>Regione</option>
+                                                    <option value="Lombardia">Lombardia</option>
+                                                </select>
+                                                <select name="provincia" id="register-provincia" class="form-control">
+                                                    <option value="" disabled selected hidden>Provincia</option>
+                                                    <option value="Milano">Milano</option>
+                                                </select>
+                                                <select name="comune" id="register-comune" class="form-control">
+                                                    <option value="" disabled selected hidden>Comune</option>
+                                                    <option value="Milano">Milano</option>
+                                                </select>
                                             </div>
                                             <div class="md-form md-outline">
                                                 <i class="fas fa-envelope prefix"></i>
-                                                <input type="email" id="formLoginRegister-email-example" class="form-control">
-                                                <label data-error="wrong" data-success="right" for="formLoginRegister-email-example">Your
-                                                    email</label>
+                                                <input type="email" id="formLoginRegister-email-example" class="form-control" placeholder="E-mail">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-email-example"></label>
                                             </div>
                                             <div class="md-form md-outline">
                                                 <i class="fas fa-lock prefix"></i>
-                                                <input type="password" id="formLoginRegister-password-example" class="form-control">
-                                                <label data-error="wrong" data-success="right" for="formLoginRegister-password-example">Your
-                                                    password</label>
+                                                <input type="password" id="formLoginRegister-password-example" class="form-control" placeholder="Password">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-password-example"></label>
                                             </div>
                                             <div class="md-form md-outline">
                                                 <i class="fas fa-key prefix"></i>
-                                                <input type="password" id="formLoginRegister-password-repeat" class="form-control">
-                                                <label data-error="wrong" data-success="right" for="formLoginRegister-password-repeat">Repeat
-                                                    password</label>
+                                                <input type="password" id="formLoginRegister-password-repeat" class="form-control" placeholder="Repeat Password">
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-password-repeat"></label>
+                                            </div>
+                                            <div class="md-form md-outline">
+                                                <i class="fas fa-user-tag prefix"></i>
+                                                <select name="tipoAccount" id="tipoAccount" class="form-control">
+                                                    <option value="" disabled selected hidden>Tipologia</option>
+                                                    <option value="acquirente">Acquirente</option>
+                                                    <option value="venditore">Venditore</option>
+                                                    <option value="venditoreAcquirente">Acquirente e venditore</option>
+                                                </select>
                                             </div>
 
-                                            <div class="form-check mt-4 mb-3 pl-0 text-left">
+                                            <div class="form-check mt-4 mb-3 pl-0 text-left d-inline">
                                                 <input type="checkbox" class="form-check-input filled-in" id="formLoginRegister-newsletter"
                                                        name="newsletter">
                                                 <label class="form-check-label small grey-text" for="formLoginRegister-newsletter">
-                                                    I agree to sign up for account notifications and newsletter
+                                                    Confermo la mia iscrizione alla newsletter
                                                 </label>
                                             </div>
 
                                             <div class="text-center">
-                                                <p class="small grey-text mb-4">Lorem ipsum dolor sit amet <a target="_blank" href="#!">Privacy
-                                                    Policy</a>.</p>
-                                                <button type="button" class="btn btn-primary my-2">Sign up</button>
+                                                <button type="button" class="btn btn-warning my-2">Registrati</button>
                                             </div>
 
                                         </form>
@@ -175,8 +192,8 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-outline-primary waves-effect waves-light"
-                                        data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-outline-warning waves-effect waves-light"
+                                        data-dismiss="modal">Chiudi</button>
                             </div>
                         </div>
                     </div>
@@ -190,8 +207,8 @@
 
 
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Registrati</a>
+            <li class="nav-item pt-3px">
+               <a class="nav-link pt" href="#0" onclick="accediRegistrati('tabRegistrati')">Registrati</a>
             </li>
         </ul>
     </div>
@@ -588,7 +605,7 @@
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/carosello.js"></script>
-<script src="js/regioneProvincia.js"></script>
+<script src="js/navbar.js"></script>
 <script src="js/owl.carousel.js"></script>
 </body>
 </html>
