--- a/risultati.html
+++ b/risultati.html
@@ -528,7 +528,7 @@
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
-<script src="js/regioneProvincia.js"></script>
+<script src="js/navbar.js"></script>
 <script src="js/risultati.js"></script>
 
 
