--- a/watched.html
+++ b/watched.html
@@ -255,7 +255,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/regioneProvincia.js"></script>
+    <script src="js/navbar.js"></script>
     <script src="js/bottoni.js"></script>
 </body>
 
