--- a/profile.html
+++ b/profile.html
@@ -95,7 +95,7 @@
                                             <div class="row">
                                                 <div class="col-md-4 border-right">
                                                     <div class="profile-img">
-                                                        <img src="img/ceciglia_rotta.jpg" alt=""/>
+                                                        <img src="img/placeholder_profilo.png" alt=""/>
                                                         <div class="file btn btn-lg x btn-primary mt-0">
                                                             Cambia foto
                                                             <input type="file" name="file"/>
@@ -150,9 +150,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary btn-outline-danger" data-dismiss="modal">Annulla</button>
-                                        <button type="button" class="btn btn-primary btn-outline-success">Salva modifiche</button>
+                                    <div class="modal-footer flex-row d-flex">
+                                        <button type="button" class="btn btn-secondary btn-danger " data-dismiss="modal">Elimina Profilo</button>
+                                        <button type="button" class="btn btn-secondary btn-outline-danger ml-auto" data-dismiss="modal">Annulla</button>
+                                        <button type="button" class="btn btn-primary btn-outline-success">Salva</button>
                                     </div>
                                 </div>
                             </div>
